now current button is clearly stated + added footer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="button">Button</string>
     <string name="todo">TODO</string>
     <string name="textview">TextView</string>
-    <string name="footer">footer</string>
+    <string name="footer">©Игошин Даниил</string>
     <string name="home">home</string>
     <string name="contacts">contacts</string>
     <string name="farrow"><![CDATA[>>]]></string>
